syntax = "proto3";

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc AddNews (News) returns (News) {}
    rpc DeleteNews (NewsId) returns (Empty) {}
    rpc EditNews (News) returns (News) {}
    rpc GetNews (NewsId) returns (News) {}
}

message Empty {}

message NewsList {
    repeated News news = 1;
}

message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string image = 4;
}

message NewsId {
    string id = 1;
}